# HowlingWolves

./: .gitignore  CMakeLists.txt  INSTALL.txt  build_installer.sh  build_installer_mac.sh  build_installer_mac_signed.sh  build_installer_win.ps1  claude.md  claude_task.md  marketing_launch_plan.md  vst_signing_instructions.md
.claude/worktrees/practical-easley/: .gitignore
.claude/worktrees/practical-easley/.github/workflows/: build.yml
.claude/worktrees/practical-easley/Source/: LicenseActivationOverlay.h  LicenseManager.h  PerformTab.cpp  PresetManager.cpp  PresetManager.h  SynthEngine.cpp  VisualizerComponent.cpp  VisualizerComponent.h
.claude/worktrees/practical-easley/docs/: implementation_plan.md  index.html
.claude/worktrees/practical-easley/docs/blog/: index.html
.claude/worktrees/practical-easley/docs/blog/howling-wolves-workflow/: index.html
.claude/worktrees/practical-easley/docs/blog/welcome-to-wolf-pacc/: index.html
.claude/worktrees/practical-easley/docs/downloads/Wolf_Pacc_Free_Teaser_Pack/: Welcome_ReadMe.txt
.claude/worktrees/practical-easley/docs/expansions/: index.html
.claude/worktrees/practical-easley/docs/js/: conversion.js
.claude/worktrees/practical-easley/docs/melodies/: index.html
.cursor/skills/expert-juce-vst/: SKILL.md
.github/workflows/: build-promo.yml  build.yml
Source/: EffectsProcessor.cpp  EffectsProcessor.h  LicenseActivationOverlay.cpp  LicenseActivationOverlay.h  LicenseConfig.h  LicenseManager.cpp  LicenseManager.h  MidiDragComponent.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowser.cpp  PresetBrowser.h  SampleManager.cpp  SampleManager.h  SettingsTab.cpp  SynthEngine.h
docs/: CLAUDE.md  CNAME  audio-player.js  beats.html  bundles.html  drumkits.html  expansions.html  free-download.html  free-sounds.html  index.html  melodies.html  sitemap.xml  styles.css  success.html  vst.html
docs/beats/: index.html
docs/blog/: index.html
docs/blog/drum-transients-mix/: index.html
docs/blog/howling-wolves-workflow/: index.html
docs/blog/welcome-to-wolf-pacc/: index.html
docs/bundles/: index.html
docs/docs/: index.html
docs/docs/beats/: index.html
docs/docs/drumkits/: index.html
docs/docs/expansions/: index.html
docs/docs/melodies/: index.html
docs/docs/vst/: index.html
docs/drumkits/: index.html
docs/expansions/: index.html
docs/free-download/: index.html
docs/free-sounds/: index.html
docs/melodies/: index.html
docs/refund-policy/: index.html
docs/success/: index.html
docs/terms-of-service/: index.html
docs/vst/: index.html
